--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -11,6 +11,7 @@ jobs:
     name: Deploy to Bookmarker Beta
     steps:
     - uses: actions/checkout@v4
+    - uses: oven-sh/setup-bun@v2
     - name: Deploy to Bookmarker Beta
       uses: cloudflare/wrangler-action@v3
       with:
