--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
           DISCORD_PUBLIC_KEY=${{ secrets.DISCORD_PUBLIC_KEY }}
           DISCORD_BOT_TOKEN=${{ secrets.DISCORD_BOT_TOKEN }}
     env:
-      ENVIRONMENT: "production"
+      ENVIRONMENT: production
