--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -17,10 +17,15 @@ jobs:
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         secrets: |
-          BETA_BASE_URL=${{ secrets.BETA_BASE_URL }}
-          BETA_DEPLOY_SECRET=${{ secrets.BETA_DEPLOY_SECRET }}
-          BETA_DISCORD_CLIENT_ID=${{ secrets.BETA_DISCORD_CLIENT_ID }}
-          BETA_DISCORD_PUBLIC_KEY=${{ secrets.BETA_DISCORD_PUBLIC_KEY }}
-          BETA_DISCORD_BOT_TOKEN=${{ secrets.BETA_DISCORD_BOT_TOKEN }}
+          BETA_BASE_URL
+          BETA_DEPLOY_SECRET
+          BETA_DISCORD_CLIENT_ID
+          BETA_DISCORD_PUBLIC_KEY
+          BETA_DISCORD_BOT_TOKEN
     env:
       ENVIRONMENT: beta
+      BETA_BASE_URL: ${{ secrets.BETA_BASE_URL }}
+      BETA_DEPLOY_SECRET: ${{ secrets.BETA_DEPLOY_SECRET }}
+      BETA_DISCORD_CLIENT_ID: ${{ secrets.BETA_DISCORD_CLIENT_ID }}
+      BETA_DISCORD_PUBLIC_KEY: ${{ secrets.BETA_DISCORD_PUBLIC_KEY }}
+      BETA_DISCORD_BOT_TOKEN: ${{ secrets.BETA_DISCORD_BOT_TOKEN }}
