--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         secrets: |
+          ENVIRONMENT
           BETA_BASE_URL
           BETA_DEPLOY_SECRET
           BETA_DISCORD_CLIENT_ID
