ci: retain log settings

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@ name = "bookmarker"
 main = "src/entry.ts"
 compatibility_date = "2025-02-04"
 account_id = "575c5711293e5f7ab8e8edeb1e30fd45"
+
+[observability]
+enabled = true
