--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 	"compilerOptions": {
 		"strict": true,
 		"skipLibCheck": true,
-		"lib": ["es2022"],
+		"lib": ["dom", "es2022"],
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"baseUrl": ".",
