--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Bookmarker Production
 on:
   push:
     branches:
-    - prod
+    - main
 
 jobs:
   deploy:
@@ -17,10 +17,16 @@ jobs:
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         secrets: |
-          BASE_URL=${{ secrets.BASE_URL }}
-          DEPLOY_SECRET=${{ secrets.DEPLOY_SECRET }}
-          DISCORD_CLIENT_ID=${{ secrets.DISCORD_CLIENT_ID }}
-          DISCORD_PUBLIC_KEY=${{ secrets.DISCORD_PUBLIC_KEY }}
-          DISCORD_BOT_TOKEN=${{ secrets.DISCORD_BOT_TOKEN }}
+          ENVIRONMENT
+          BASE_URL
+          DEPLOY_SECRET
+          DISCORD_CLIENT_ID
+          DISCORD_PUBLIC_KEY
+          DISCORD_BOT_TOKEN
     env:
       ENVIRONMENT: production
+      BASE_URL: ${{ secrets.BASE_URL }}
+      DEPLOY_SECRET: ${{ secrets.DEPLOY_SECRET }}
+      DISCORD_CLIENT_ID: ${{ secrets.DISCORD_CLIENT_ID }}
+      DISCORD_PUBLIC_KEY: ${{ secrets.DISCORD_PUBLIC_KEY }}
+      DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
